<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Enter your name</string>
    <string name="telephone">Telephone</string>
    <string name="size">Size</string>
    <string name="smoke">Smoking</string>
    <string name="reserve">Reserve</string>
    <string name="reset">Reset</string>
    <string name="day">Day</string>
    <string name="etDay">Click here to select day</string>
    <string name="time">Time</string>
    <string name="etTime">Click here to select time</string>
</resources>